# pyrform

./: Cargo.toml  README.md
examples/: README.md  db.py  hello_world.py
src/: args.rs  main.rs
src/model/: mod.rs  task.rs  worker.rs
src/routes/task/: handlers.rs  mod.rs  state.rs
src/routes/worker/: handlers.rs  mod.rs  state.rs
src/services/worker/: mod.rs  python.rs  service.rs  task.rs  worker.rs
