[package]
name = "pyrform"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
itertools = "0.13.0"
notify = "6.1.1"
path-absolutize = "3.1.1"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.8.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.4", features = ["derive"] }
